Please enter the commit message for your changes. Lines starting

--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
                             <option value="NULL">Select your city</option>
                         </select>
                     </div>
-                    <button type="button" class="btn btn-primary" onclick="showDetails()">Primary</button>
+                    <button type="button" class="btn btn-primary" onclick="showDetails()">Submit</button>
                 </div>
             </div>
         </div>
